@@ -1,16 +1,13 @@
 package es.ir;
 
-import static es.runtime.UnwarrantedOptimismException.INVALID_PROGRAM_POINT;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
+
 import es.codegen.types.Type;
 import es.ir.annotations.Ignore;
 import es.ir.annotations.Immutable;
 import es.ir.visitor.NodeVisitor;
 import es.parser.TokenType;
+import static es.runtime.UnwarrantedOptimismException.INVALID_PROGRAM_POINT;
 
 /**
  * BinaryNode nodes represent two operand operations.
@@ -18,14 +15,12 @@ import es.parser.TokenType;
 @Immutable
 public final class BinaryNode extends Expression implements Assignment<Expression>, Optimistic {
 
-  private static final long serialVersionUID = 1L;
+  // Placeholder for "undecided optimistic ADD type".
+  // Unfortunately, we can't decide the type of ADD during optimistic type calculation
+  // as it can have local variables as its operands that will decide its ultimate type.
+  private static final Type OPTIMISTIC_UNDECIDED_TYPE = Type.typeFor(new Object(){/*empty*/}.getClass());
 
-  // Placeholder for "undecided optimistic ADD type". Unfortunately, we can't decide the type of ADD during optimistic
-  // type calculation as it can have local variables as its operands that will decide its ultimate type.
-  private static final Type OPTIMISTIC_UNDECIDED_TYPE = Type.typeFor(new Object() {/*empty*/
-  }.getClass());
-
-  /** Left hand side argument. */
+  // Left hand side argument.
   private final Expression lhs;
 
   private final Expression rhs;
@@ -36,8 +31,7 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
   private transient Type cachedType;
 
   @Ignore
-  private static final Set<TokenType> CAN_OVERFLOW
-          = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(new TokenType[]{
+  static final Set<TokenType> CAN_OVERFLOW = Set.of(
     TokenType.ADD,
     TokenType.DIV,
     TokenType.MOD,
@@ -50,7 +44,7 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
     TokenType.ASSIGN_SUB,
     TokenType.SHR,
     TokenType.ASSIGN_SHR
-  })));
+  );
 
   /**
    * Constructor
@@ -59,7 +53,7 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param lhs    left hand side
    * @param rhs    right hand side
    */
-  public BinaryNode(final long token, final Expression lhs, final Expression rhs) {
+  public BinaryNode(long token, Expression lhs, Expression rhs) {
     super(token, lhs.getStart(), rhs.getFinish());
     assert !(isTokenType(TokenType.AND) || isTokenType(TokenType.OR)) || lhs instanceof JoinPredecessorExpression;
     this.lhs = lhs;
@@ -68,7 +62,7 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
     this.type = null;
   }
 
-  private BinaryNode(final BinaryNode binaryNode, final Expression lhs, final Expression rhs, final Type type, final int programPoint) {
+  BinaryNode(BinaryNode binaryNode, Expression lhs, Expression rhs, Type type, int programPoint) {
     super(binaryNode);
     this.lhs = lhs;
     this.rhs = rhs;
@@ -81,19 +75,10 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @return true if the node is a comparison operation.
    */
   public boolean isComparison() {
-    switch (tokenType()) {
-      case EQ:
-      case EQU:
-      case NE:
-      case NEQU:
-      case LE:
-      case LT:
-      case GE:
-      case GT:
-        return true;
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case EQ, EQU, NE, NEQU, LE, LT, GE, GT -> true;
+      default -> false;
+    };
   }
 
   /**
@@ -101,15 +86,10 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @return true if the node is a relational operation.
    */
   public boolean isRelational() {
-    switch (tokenType()) {
-      case LT:
-      case GT:
-      case LE:
-      case GE:
-        return true;
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case LT, GT, LE, GE -> true;
+      default -> false;
+    };
   }
 
   /**
@@ -125,14 +105,11 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param tokenType the token type
    * @return true if the token type represents a logical operation.
    */
-  public static boolean isLogical(final TokenType tokenType) {
-    switch (tokenType) {
-      case AND:
-      case OR:
-        return true;
-      default:
-        return false;
-    }
+  public static boolean isLogical(TokenType tokenType) {
+    return switch (tokenType) {
+      case AND, OR -> true;
+      default -> false;
+    };
   }
 
   /**
@@ -141,116 +118,75 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @return Type
    */
   public Type getWidestOperandType() {
-    switch (tokenType()) {
-      case SHR:
-      case ASSIGN_SHR:
-        return Type.INT;
-      case INSTANCEOF:
-        return Type.OBJECT;
-      default:
-        if (isComparison()) {
-          return Type.OBJECT;
-        }
-        return getWidestOperationType();
-    }
+    return switch (tokenType()) {
+      case SHR, ASSIGN_SHR -> Type.INT;
+      case INSTANCEOF -> Type.OBJECT;
+      default -> { yield isComparison() ? Type.OBJECT : getWidestOperationType(); }
+    };
   }
 
   @Override
   public Type getWidestOperationType() {
-    switch (tokenType()) {
-      case ADD:
-      case ASSIGN_ADD: {
-        // Compare this logic to decideType(Type, Type); it's similar, but it handles the optimistic type
-        // calculation case while this handles the conservative case.
-        final Type lhsType = lhs.getType();
-        final Type rhsType = rhs.getType();
+    return switch (tokenType()) {
+
+      case ADD, ASSIGN_ADD -> {
+        // Compare this logic to decideType(Type, Type);
+        // it's similar, but it handles the optimistic type calculation case while this handles the conservative case.
+        var lhsType = lhs.getType();
+        var rhsType = rhs.getType();
         if (lhsType == Type.BOOLEAN && rhsType == Type.BOOLEAN) {
-          // Will always fit in an int, as the value range is [0, 1, 2]. If we didn't treat them specially here,
-          // they'd end up being treated as generic INT operands and their sum would be conservatively considered
-          // to be a LONG in the generic case below; we can do better here.
-          return Type.INT;
+          // Will always fit in an int, as the value range is [0, 1, 2].
+          // If we didn't treat them specially here, they'd end up being treated as generic INT operands
+          // and their sum would be conservatively considered to be a LONG in the generic case below; we can do better here.
+          yield Type.INT;
         } else if (isString(lhsType) || isString(rhsType)) {
-          // We can statically figure out that this is a string if either operand is a string. In this case, use
-          // CHARSEQUENCE to prevent it from being proactively flattened.
-          return Type.CHARSEQUENCE;
+          // We can statically figure out that this is a string if either operand is a string.
+          // In this case, use CHARSEQUENCE to prevent it from being proactively flattened.
+          yield Type.CHARSEQUENCE;
         }
-        final Type widestOperandType = Type.widest(undefinedToNumber(booleanToInt(lhsType)), undefinedToNumber(booleanToInt(rhsType)));
+        var widestOperandType = Type.widest(undefinedToNumber(booleanToInt(lhsType)), undefinedToNumber(booleanToInt(rhsType)));
         if (widestOperandType.isNumeric()) {
-          return Type.NUMBER;
+          yield Type.NUMBER;
         }
-        // We pretty much can't know what it will be statically. Must presume OBJECT conservatively, as we can end
-        // up getting either a string or an object when adding something + object, e.g.:
-        // 1 + {} == "1[object Object]", but
-        // 1 + {valueOf: function() { return 2 }} == 3. Also:
-        // 1 + {valueOf: function() { return "2" }} == "12".
-        return Type.OBJECT;
+        // We pretty much can't know what it will be statically.
+        // Must presume OBJECT conservatively, as we can end up getting either a string or an object when adding something + object,
+        // e.g.   1 + {} == "1[object Object]",
+        //  but   1 + {valueOf: function() { return 2 }} == 3.
+        //  Also: 1 + {valueOf: function() { return "2" }} == "12".
+        yield Type.OBJECT;
       }
-      case SHR:
-      case ASSIGN_SHR:
-        return Type.NUMBER;
-      case ASSIGN_SAR:
-      case ASSIGN_SHL:
-      case BIT_AND:
-      case BIT_OR:
-      case BIT_XOR:
-      case ASSIGN_BIT_AND:
-      case ASSIGN_BIT_OR:
-      case ASSIGN_BIT_XOR:
-      case SAR:
-      case SHL:
-        return Type.INT;
-      case DIV:
-      case MOD:
-      case ASSIGN_DIV:
-      case ASSIGN_MOD: {
-        // Naively, one might think MOD has the same type as the widest of its operands, this is unfortunately not
-        // true when denominator is zero, so even type(int % int) == double.
-        return Type.NUMBER;
+
+      case SHR, ASSIGN_SHR ->  Type.NUMBER;
+      case ASSIGN_SAR, ASSIGN_SHL, BIT_AND, BIT_OR, BIT_XOR, ASSIGN_BIT_AND, ASSIGN_BIT_OR, ASSIGN_BIT_XOR, SAR, SHL -> Type.INT;
+
+      // Naively, one might think MOD has the same type as the widest of its operands,
+      // this is unfortunately not true when denominator is zero, so even type(int % int) == double.
+      case DIV, MOD, ASSIGN_DIV, ASSIGN_MOD -> Type.NUMBER;
+
+      case MUL, SUB, ASSIGN_MUL, ASSIGN_SUB -> {
+        var lhsType = lhs.getType();
+        var rhsType = rhs.getType();
+        yield (lhsType == Type.BOOLEAN && rhsType == Type.BOOLEAN) ? Type.INT : Type.NUMBER;
       }
-      case MUL:
-      case SUB:
-      case ASSIGN_MUL:
-      case ASSIGN_SUB: {
-        final Type lhsType = lhs.getType();
-        final Type rhsType = rhs.getType();
-        if (lhsType == Type.BOOLEAN && rhsType == Type.BOOLEAN) {
-          return Type.INT;
-        }
-        return Type.NUMBER;
-      }
-      case VOID: {
-        return Type.UNDEFINED;
-      }
-      case ASSIGN: {
-        return rhs.getType();
-      }
-      case INSTANCEOF: {
-        return Type.BOOLEAN;
-      }
-      case COMMARIGHT: {
-        return rhs.getType();
-      }
-      case AND:
-      case OR: {
-        return Type.widestReturnType(lhs.getType(), rhs.getType());
-      }
-      default:
-        if (isComparison()) {
-          return Type.BOOLEAN;
-        }
-        return Type.OBJECT;
-    }
+      case VOID -> Type.UNDEFINED;
+      case ASSIGN -> rhs.getType();
+      case INSTANCEOF -> Type.BOOLEAN;
+      case COMMARIGHT -> rhs.getType();
+      case AND, OR -> Type.widestReturnType(lhs.getType(), rhs.getType());
+
+      default -> { yield isComparison() ? Type.BOOLEAN : Type.OBJECT; }
+    };
   }
 
-  private static boolean isString(final Type type) {
+  static boolean isString(Type type) {
     return type == Type.STRING || type == Type.CHARSEQUENCE;
   }
 
-  private static Type booleanToInt(final Type type) {
+  static Type booleanToInt(Type type) {
     return type == Type.BOOLEAN ? Type.INT : type;
   }
 
-  private static Type undefinedToNumber(final Type type) {
+  static Type undefinedToNumber(Type type) {
     return type == Type.UNDEFINED ? Type.NUMBER : type;
   }
 
@@ -261,23 +197,10 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    */
   @Override
   public boolean isAssignment() {
-    switch (tokenType()) {
-      case ASSIGN:
-      case ASSIGN_ADD:
-      case ASSIGN_BIT_AND:
-      case ASSIGN_BIT_OR:
-      case ASSIGN_BIT_XOR:
-      case ASSIGN_DIV:
-      case ASSIGN_MOD:
-      case ASSIGN_MUL:
-      case ASSIGN_SAR:
-      case ASSIGN_SHL:
-      case ASSIGN_SHR:
-      case ASSIGN_SUB:
-        return true;
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case ASSIGN, ASSIGN_ADD, ASSIGN_BIT_AND, ASSIGN_BIT_OR, ASSIGN_BIT_XOR, ASSIGN_DIV, ASSIGN_MOD, ASSIGN_MUL, ASSIGN_SAR, ASSIGN_SHL, ASSIGN_SHR, ASSIGN_SUB -> true;
+      default -> false;
+    };
   }
 
   @Override
@@ -291,7 +214,7 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
   }
 
   @Override
-  public BinaryNode setAssignmentDest(final Expression n) {
+  public BinaryNode setAssignmentDest(Expression n) {
     return setLHS(n);
   }
 
@@ -305,9 +228,12 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param visitor IR navigating visitor.
    */
   @Override
-  public Node accept(final NodeVisitor<? extends LexicalContext> visitor) {
+  public Node accept(NodeVisitor<? extends LexicalContext> visitor) {
     if (visitor.enterBinaryNode(this)) {
-      return visitor.leaveBinaryNode(setLHS((Expression) lhs.accept(visitor)).setRHS((Expression) rhs.accept(visitor)));
+      return visitor.leaveBinaryNode(
+        setLHS((Expression) lhs.accept(visitor))
+        .setRHS((Expression) rhs.accept(visitor))
+      );
     }
 
     return this;
@@ -315,98 +241,52 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
 
   @Override
   public boolean isLocal() {
-    switch (tokenType()) {
-      case SAR:
-      case SHL:
-      case SHR:
-      case BIT_AND:
-      case BIT_OR:
-      case BIT_XOR:
-      case ADD:
-      case DIV:
-      case MOD:
-      case MUL:
-      case SUB:
-        return lhs.isLocal() && lhs.getType().isJSPrimitive()
-                && rhs.isLocal() && rhs.getType().isJSPrimitive();
-      case ASSIGN_ADD:
-      case ASSIGN_BIT_AND:
-      case ASSIGN_BIT_OR:
-      case ASSIGN_BIT_XOR:
-      case ASSIGN_DIV:
-      case ASSIGN_MOD:
-      case ASSIGN_MUL:
-      case ASSIGN_SAR:
-      case ASSIGN_SHL:
-      case ASSIGN_SHR:
-      case ASSIGN_SUB:
-        return lhs instanceof IdentNode && lhs.isLocal() && lhs.getType().isJSPrimitive()
-                && rhs.isLocal() && rhs.getType().isJSPrimitive();
-      case ASSIGN:
-        return lhs instanceof IdentNode && lhs.isLocal() && rhs.isLocal();
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case SAR, SHL, SHR, BIT_AND, BIT_OR, BIT_XOR, ADD, DIV, MOD, MUL, SUB -> lhs.isLocal() && lhs.getType().isJSPrimitive() && rhs.isLocal() && rhs.getType().isJSPrimitive();
+      case ASSIGN_ADD, ASSIGN_BIT_AND, ASSIGN_BIT_OR, ASSIGN_BIT_XOR, ASSIGN_DIV, ASSIGN_MOD, ASSIGN_MUL, ASSIGN_SAR, ASSIGN_SHL, ASSIGN_SHR, ASSIGN_SUB -> lhs instanceof IdentNode && lhs.isLocal() && lhs.getType().isJSPrimitive() && rhs.isLocal() && rhs.getType().isJSPrimitive();
+      case ASSIGN -> lhs instanceof IdentNode && lhs.isLocal() && rhs.isLocal();
+      default -> false;
+    };
   }
 
   @Override
   public boolean isAlwaysFalse() {
-    switch (tokenType()) {
-      case COMMARIGHT:
-        return rhs.isAlwaysFalse();
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case COMMARIGHT -> rhs.isAlwaysFalse();
+      default -> false;
+    };
   }
 
   @Override
   public boolean isAlwaysTrue() {
-    switch (tokenType()) {
-      case COMMARIGHT:
-        return rhs.isAlwaysTrue();
-      default:
-        return false;
-    }
+    return switch (tokenType()) {
+      case COMMARIGHT -> rhs.isAlwaysTrue();
+      default -> false;
+    };
   }
 
   @Override
-  public void toString(final StringBuilder sb, final boolean printType) {
-    final TokenType tokenType = tokenType();
-
-    final boolean lhsParen = tokenType.needsParens(lhs().tokenType(), true);
-    final boolean rhsParen = tokenType.needsParens(rhs().tokenType(), false);
-
+  public void toString(StringBuilder sb, boolean printType) {
+    var tokenType = tokenType();
+    var lhsParen = tokenType.needsParens(lhs().tokenType(), true);
+    var rhsParen = tokenType.needsParens(rhs().tokenType(), false);
     if (lhsParen) {
       sb.append('(');
     }
-
     lhs().toString(sb, printType);
-
     if (lhsParen) {
       sb.append(')');
     }
-
     sb.append(' ');
-
     switch (tokenType) {
-      case COMMARIGHT:
-        sb.append(",>");
-        break;
-      case INCPREFIX:
-      case DECPREFIX:
-        sb.append("++");
-        break;
-      default:
-        sb.append(tokenType.getName());
-        break;
+      case COMMARIGHT -> sb.append(",>");
+      case INCPREFIX, DECPREFIX -> sb.append("++");
+      default -> sb.append(tokenType.getName());
     }
-
     if (isOptimistic()) {
       sb.append(Expression.OPT_IDENTIFIER);
     }
-
     sb.append(' ');
-
     if (rhsParen) {
       sb.append('(');
     }
@@ -437,11 +317,8 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param lhs new left hand side expression
    * @return a node equivalent to this one except for the requested change.
    */
-  public BinaryNode setLHS(final Expression lhs) {
-    if (this.lhs == lhs) {
-      return this;
-    }
-    return new BinaryNode(this, lhs, rhs, type, programPoint);
+  public BinaryNode setLHS(Expression lhs) {
+    return (this.lhs == lhs) ? this : new BinaryNode(this, lhs, rhs, type, programPoint);
   }
 
   /**
@@ -449,11 +326,8 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param rhs new right hand side expression
    * @return a node equivalent to this one except for the requested change.
    */
-  public BinaryNode setRHS(final Expression rhs) {
-    if (this.rhs == rhs) {
-      return this;
-    }
-    return new BinaryNode(this, lhs, rhs, type, programPoint);
+  public BinaryNode setRHS(Expression rhs) {
+    return (this.rhs == rhs) ? this : new BinaryNode(this, lhs, rhs, type, programPoint);
   }
 
   /**
@@ -462,11 +336,8 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
    * @param rhs new left hand side expression
    * @return a node equivalent to this one except for the requested change.
    */
-  public BinaryNode setOperands(final Expression lhs, final Expression rhs) {
-    if (this.lhs == lhs && this.rhs == rhs) {
-      return this;
-    }
-    return new BinaryNode(this, lhs, rhs, type, programPoint);
+  public BinaryNode setOperands(Expression lhs, Expression rhs) {
+    return (this.lhs == lhs && this.rhs == rhs) ? this : new BinaryNode(this, lhs, rhs, type, programPoint);
   }
 
   @Override
@@ -480,16 +351,13 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
   }
 
   @Override
-  public BinaryNode setProgramPoint(final int programPoint) {
-    if (this.programPoint == programPoint) {
-      return this;
-    }
-    return new BinaryNode(this, lhs, rhs, type, programPoint);
+  public BinaryNode setProgramPoint(int programPoint) {
+    return (this.programPoint == programPoint) ? this : new BinaryNode(this, lhs, rhs, type, programPoint);
   }
 
   @Override
   public Type getMostOptimisticType() {
-    final TokenType tokenType = tokenType();
+    var tokenType = tokenType();
     if (tokenType == TokenType.ADD || tokenType == TokenType.ASSIGN_ADD) {
       return OPTIMISTIC_UNDECIDED_TYPE;
     } else if (CAN_OVERFLOW.contains(tokenType)) {
@@ -504,8 +372,8 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
   }
 
   /**
-   * Returns true if the node has the optimistic type of the node is not yet decided. Optimistic ADD nodes start out
-   * as undecided until we can figure out if they're numeric or not.
+   * Returns true if the node has the optimistic type of the node is not yet decided.
+   * Optimistic ADD nodes start out as undecided until we can figure out if they're numeric or not.
    * @return true if the node has the optimistic type of the node is not yet decided.
    */
   public boolean isOptimisticUndecidedType() {
@@ -520,11 +388,11 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
     return cachedType;
   }
 
-  private Type getTypeUncached() {
+  Type getTypeUncached() {
     if (type == OPTIMISTIC_UNDECIDED_TYPE) {
       return decideType(lhs.getType(), rhs.getType());
     }
-    final Type widest = getWidestOperationType();
+    var widest = getWidestOperationType();
     if (type == null) {
       return widest;
     }
@@ -534,26 +402,25 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
     return Type.narrowest(widest, Type.widest(type, Type.widest(lhs.getType(), rhs.getType())));
   }
 
-  private static Type decideType(final Type lhsType, final Type rhsType) {
-    // Compare this to getWidestOperationType() for ADD and ASSIGN_ADD cases. There's some similar logic, but these
-    // are optimistic decisions, meaning that we don't have to treat boolean addition separately (as it'll become
-    // int addition in the general case anyway), and that we also don't conservatively widen sums of ints to
-    // longs, or sums of longs to doubles.
+  static Type decideType(Type lhsType, Type rhsType) {
+    // Compare this to getWidestOperationType() for ADD and ASSIGN_ADD cases.
+    // There's some similar logic, but these are optimistic decisions,
+    // meaning that we don't have to treat boolean addition separately (as it'll become int addition in the general case anyway),
+    // and that we also don't conservatively widen sums of ints to longs, or sums of longs to doubles.
     if (isString(lhsType) || isString(rhsType)) {
       return Type.CHARSEQUENCE;
     }
-    // NOTE: We don't have optimistic object-to-(int, long) conversions. Therefore, if any operand is an Object, we
-    // bail out of optimism here and presume a conservative Object return value, as the object's ToPrimitive() can
-    // end up returning either a number or a string, and their common supertype is Object, for better or worse.
-    final Type widest = Type.widest(undefinedToNumber(booleanToInt(lhsType)), undefinedToNumber(booleanToInt(rhsType)));
+    // NOTE: We don't have optimistic object-to-(int, long) conversions.
+    // Therefore, if any operand is an Object, we bail out of optimism here and presume a conservative Object return value,
+    // as the object's ToPrimitive() can end up returning either a number or a string, and their common supertype is Object, for better or worse.
+    var widest = Type.widest(undefinedToNumber(booleanToInt(lhsType)), undefinedToNumber(booleanToInt(rhsType)));
     return widest.isObject() ? Type.OBJECT : widest;
   }
 
   /**
-   * If the node is a node representing an add operation and has {@link #isOptimisticUndecidedType() optimistic
-   * undecided type}, decides its type. Should be invoked after its operands types have been finalized.
-   * @return returns a new node similar to this node, but with its type set to the type decided from the type of its
-   * operands.
+   * If the node is a node representing an add operation and has {@link #isOptimisticUndecidedType() optimistic undecided type}, decides its type.
+   * Should be invoked after its operands types have been finalized.
+   * @return returns a new node similar to this node, but with its type set to the type decided from the type of its operands.
    */
   public BinaryNode decideType() {
     assert type == OPTIMISTIC_UNDECIDED_TYPE;
@@ -561,10 +428,8 @@ public final class BinaryNode extends Expression implements Assignment<Expressio
   }
 
   @Override
-  public BinaryNode setType(final Type type) {
-    if (this.type == type) {
-      return this;
-    }
-    return new BinaryNode(this, lhs, rhs, type, programPoint);
+  public BinaryNode setType(Type type) {
+    return (this.type == type) ? this : new BinaryNode(this, lhs, rhs, type, programPoint);
   }
+
 }
